[package]
name = "smtc-copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
windows = { version = "0.35.0", features = ["alloc", "Foundation", "Foundation_Collections", "Media_Control", "Storage_Streams"] }
